--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>My Music Player</h1>
     <audio controls>
-        <source src="path_to_your_music_file.mp3" type="audio/mp3">
+        <source src="https://github.com/oldb0y13/serene-music.git" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </body>
